# harness-node

./: .gitignore  CMakeLists.txt  PLAN.md  README.md  nrf54l15_coding_rules.md  sdkconfig.defaults
.claude/: settings.local.json
.west/: config
SPEAKER2/: SPEAKER2.ino
atom_echo_s3r/: CMakeLists.txt  idf_component.yml  main.c
docs/: atom_echo_s3r_issues.md  ble_dual_connection_audio_lessons.md  nordic_main_guide.md  nrf52_battery_guide.md  nrf52_handy_guide.md  nrf52_ota_guide.md  nrf52_porting_lessons.md  nrf52_voice_guide.md  nrf52_voice_power_diagnostics.md  nrf54-speaker_debug_summary.md  nrf54-speaker_guide.md  nrf54_power_management.md  nrf54l15_ota_guide.md  nrf54l15_ota_status.md
esp32s3/: adpcm.h  main.c
mac_client/: battery_check.py  esp32_controller.py  gesture_classifier.py  gesture_collector.py  gesture_monitor.py  gesture_visualizer.py  motion_receiver.py  nrf52_voice_client.py  nrf54_controller.py  ota_updater.py  play_wav.py  requirements.txt  serial_monitor.py  speaker_client.py  (+4 more)
main/: adpcm.c  (+1 more)
nrf52-motion/: CMakeLists.txt  build_and_flash.sh  build_and_package_ota.sh  pm.yml  prj.conf
nrf52-motion/boards/: xiao_ble_nrf52840_sense.overlay
nrf52-motion/src/: main.c
nrf52-motion/sysbuild/mcuboot/: prj.conf
nrf54-handy/: CMakeLists.txt  build_and_flash.sh  build_and_package_ota.sh  prj.conf
nrf54-handy/boards/: xiao_nrf54l15_nrf54l15_cpuapp.overlay
nrf54-handy/src/: adpcm.h  audio_capture.c  audio_capture.h  main.c
nrf54-handy/sysbuild/mcuboot/: prj.conf
nrf54-handy/sysbuild/mcuboot/boards/: xiao_nrf54l15_nrf54l15_cpuapp.overlay
(+72 files in other folders)
